--- a/src/code/03-promise-all.html
+++ b/src/code/03-promise-all.html
@@ -22,12 +22,18 @@
     }, 1500)
   })
 
+  let promise4 = new Promise((resolve, reject)=>{
+    setTimeout(()=>{
+      reject("promise4")
+    }, 4000)
+  })
+
   Promise.all([promise1, promise2, promise3]).then((resolveList)=>{
     console.log('promise all', resolveList);
   })
 
   Promise.myAll = (promiseList)=>{
-    return new Promise((resolve)=>{
+    return new Promise((resolve, reject)=>{
       let resultList = []
       let resultIndex = 0
       promiseList.forEach((promiseItem, index)=>{
@@ -35,6 +41,8 @@
           resultList[index] = data // 核心， 不能使用 resultIndex 代替 index
           resultIndex++
           if(resultList.length === resultIndex){resolve(resultList)}
+        }).catch((rejectData)=>{
+          reject(rejectData)
         })
       })
     })
@@ -45,6 +53,12 @@
   Promise.myAll([promise1, promise2, promise3]).then((resolveList)=>{
     console.log('my promise all', resolveList);
     window.test = resolveList
+  })
+
+  Promise.myAll([promise1, promise2, promise3, promise4]).then((resolveList)=>{
+    console.log(resolveList);
+  }).catch((firstRejectData)=>{
+    console.log('firstRejectData', firstRejectData);
   })
 
 
